# pgspredictor

./: .gitignore  Cargo.toml  README.md  cargo.toml  rustfmt.toml
.github/workflow/: rust.yml
.github/workflows/: rust.yml
betareader/: Cargo.toml
betareader/src/: lib.rs
data/input/: Weights.tsv  test.bed  test.bim  test.fam  test.range
data/output/: test.beta.tsv  test.check.json  test.cor.csv  test.percentile.csv  test.rank.csv  test.score.csv
genoreader/: Cargo.toml
genoreader/benches/: bed.rs
genoreader/src/: lib.rs  meta.rs  reader.rs  test.rs
genoreader/src/reader/: freq_reader.rs  read_bed_nolib.rs  test.rs
genoreader/src/reader/freq_reader/: bit_op.rs  geno_reader.rs  utils.rs
genoreader/src/reader/read_bed_nolib/: bed_crate.rs  read_meta.rs
pgspost/: Cargo.toml
pgspost/src/: args.rs  covariate.rs  main.rs  post.rs  read_score.rs
pgspost/src/covariate/: fit.rs  read_cov.rs
pgspost/src/post/: metrics.rs  rank.rs
pgspredictor/: Cargo.toml
pgspredictor/src/: args.rs  main.rs  runner.rs  utils.rs
pgspredictor/src/runner/: ind_batch.rs  post.rs  snp_batch.rs
predictor/: Cargo.toml
predictor/src/: args.rs  join.rs  lib.rs  main.rs  meta.rs  post.rs  predict.rs  runner.rs  tools.rs
predictor/src/join/: betahandler.rs  weight.rs
predictor/src/post/: metrics.rs  rank.rs  test.rs
predictor/src/predict/: rank.rs  score.rs  utils.rs
predictor/src/runner/: ind_batch.rs  post.rs  snp_batch.rs
predictor/src/tools/: arg.rs  read_beta.rs
reader/: Cargo.toml
reader/src/: beta.rs  lib.rs  reader.rs
reader/src/beta/: test.rs
reader/src/reader/: read_bed.rs  read_bed_nolib.rs  test.rs
reader/src/reader/read_bed_nolib/: bed_crate.rs  bed_error.rs  read_meta.rs
scripts/: compare.py  read_log.py  server_test.sh  test.sh
