[package]
name = "pgspost"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
predictor = {path = "../predictor"}
genoreader = {path = "../genoreader"}
betareader = {path = "../betareader"}
ndarray = "0.15.6"
anyhow = "1.0.71"
polars = { version = "0.31.1", features = ["lazy", "ndarray", "rank"] }
interp = "1.0"
env_logger = "*"
log = "0.4"
serde = "1.0.163"
serde_json="1.0.96"
clap = { version = "4.3.16", features = ["derive"] }

