[package]
name = "pgspredictor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
predictor = {path = "../predictor"}
genoreader = {path = "../genoreader"}
betareader = {path = "../betareader"}
ndarray = "0.15.6"
anyhow = "1.0.71"
polars = { version = "0.30.0", features = ["lazy", "ndarray", "rank"] }
crossbeam = "0.8.2"
clap = { version = "4.3.1", features = ["derive"] }
serde = "1.0.163"
serde_json="1.0.96"
log = "0.4"
env_logger = "0.10.0"
