[package]
name = "pgspredictor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
predictor = {path = "../predictor"}
genoreader = {path = "../genoreader"}
betareader = {path = "../betareader"}
env_logger = "*"
log = "0.4"
ndarray = "0.15.6"
anyhow = "1.0.71"
polars = { version = "0.31.1", features = ["lazy", "ndarray", "rank"] }
crossbeam = "0.8.2"
clap = { version = "4.3.16", features = ["derive"] }
serde = "1.0.163"
serde_json="1.0.96"
pprof = { version = "0.12.1", features = ["flamegraph"] }

