[package]
name = "reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#bed-reader = "0.2.34"
polars = { version = "0.30.0", features = ["lazy", "ndarray"] }
anyhow = "1.0.71"
ndarray = { version = "0.15.6", features = ["rayon", "blas"] }
blas-src = { version = "0.9", default-features = false,features = ["accelerate"] }
rayon = "*"
anyinput = "*"
thiserror = "*"
